# SkillSpector

./: README.md  RELEASE.md  pyproject.toml  release.py
src/skillspector/: llm_utils.py
src/skillspector/nodes/analyzers/: mcp_rug_pull.py  mcp_tool_poisoning.py  static_runner.py
tests/nodes/analyzers/: test_static_runner_filtering.py
tests/unit/: test_llm_utils.py
