[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillspector"
version = "0.1.0"
description = "Security scanner for AI agent skills - detect vulnerabilities before installation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "SkillSpector Team" }
]
keywords = [
    "security",
    "ai-agents",
    "vulnerability-scanner",
    "claude-code",
    "skills",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "poetry>=1.5.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
skillspector = "skillspector.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/skillspector"
Documentation = "https://github.com/your-org/skillspector#readme"
Issues = "https://github.com/your-org/skillspector/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skillspector"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
